poc: json-server plus backend fix

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@mdi/font": "6.2.95",
     "axios": "^1.6.8",
     "core-js": "^3.34.0",
+    "json-server": "^1.0.0-alpha.23",
     "roboto-fontface": "*",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vuetify": "^3.5.8"
   },
